--- a/package.json
+++ b/package.json
@@ -16,18 +16,24 @@
   "dependencies": {
     "@hapi/boom": "9.1.0",
     "@hapi/joi": "17.1.1",
+    "bcryptjs": "2.4.3",
     "body-parser": "1.19.0",
     "dotenv": "8.2.0",
     "express": "4.17.1",
+    "jsonwebtoken": "8.5.1",
     "mongodb": "3.6.3",
-    "morgan": "1.10.0"
+    "morgan": "1.10.0",
+    "passport": "0.4.1",
+    "passport-http": "0.3.0",
+    "passport-jwt": "4.0.0"
   },
   "devDependencies": {
+    "chalk": "4.1.0",
     "eslint": "7.15.0",
     "eslint-config-prettier": "7.0.0",
     "eslint-plugin-prettier": "3.2.0",
-    "husky": "^4.3.5",
-    "lint-staged": "^10.5.3",
+    "husky": "4.3.5",
+    "lint-staged": "10.5.3",
     "mocha": "8.2.1",
     "nodemon": "2.0.6",
     "prettier": "2.2.1",
