--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "1.19.0",
     "dotenv": "8.2.0",
     "express": "4.17.1",
+    "helmet": "4.4.1",
     "jsonwebtoken": "8.5.1",
     "mongodb": "3.6.3",
     "morgan": "1.10.0",
